# cimon

./: .gitignore  .graphifyignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  ERRORS.md  LICENSE  README.md  RELEASING.md  SECURITY.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  panel.html  vite.config.ts  vitest.setup.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  security-audit.yml  update-homebrew-tap.yml
scripts/: assemble-tauri-updater-manifest.mjs  assemble-tauri-updater-manifest.test.mjs  validate-release-workflow.mjs  validate-release-workflow.test.mjs
src/: App.css  App.test.tsx  App.tsx  Panel.css  Panel.test.tsx  Panel.tsx  api.test.ts  api.ts  i18n.ts  icons.tsx  main.tsx  notifications.test.ts  notifications.ts  panel-main.tsx  theme.test.ts  theme.ts  tokens.css  types.test.ts  types.ts  useUpdateState.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json  panel.json
src-tauri/icons/: icon.icns
src-tauri/locales/: app.yml
src-tauri/scripts/: build-local.sh  dev-codesign.sh
src-tauri/src/: commands.rs  config.rs  expiry.rs  fixtures.rs  i18n.rs  lib.rs  main.rs  model.rs  notify.rs  panel.rs  poller.rs  secrets.rs  tray.rs  updates.rs  window.rs
src-tauri/src/provider/: github.rs  gitlab.rs  mod.rs
src/@types/: i18next.d.ts
src/components/: AccountsSection.test.tsx  AccountsSection.tsx  ProjectsSection.test.tsx  ProjectsSection.tsx  SettingsSection.test.tsx  SettingsSection.tsx
src/locales/en/: translation.json
src/locales/fr/: translation.json
src/test/: utils.tsx
