[package]
name = "cimon"
version = "0.1.3"
description = "CIMon: a cross-platform CI pipeline monitor for the system tray / menu bar"
authors = ["Pierre-Luc Brunet <fuitad@gmail.com>"]
license = "MIT"
repository = "https://github.com/Fuitad/cimon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cimon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Read CI tokens from a plaintext `dev-tokens.json` (next to the config) instead of the OS keychain,
# so local unsigned/ad-hoc builds don't re-prompt for keychain access on every rebuild. Auto-enabled
# for debug builds (`tauri dev`); pass `--features dev-tokens` for a local packaged build. NEVER
# enable for distributed builds: it stores tokens in the clear. CI ships with default features, so
# the whole plaintext path is compiled out of release binaries.
dev-tokens = []

[dependencies]
# `macos-private-api` enables the transparent panel window (rounded-corner popover); it pairs with
# `app.macOSPrivateApi: true` in tauri.conf.json. `tray-icon` powers the menu-bar/tray presence.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# Native notification backend driven directly (not through tauri-plugin-notification) so a clicked
# transition notification can open the matching CI page. The plugin's click/action events are
# mobile-only and dropped on desktop; notify-rust reports a click as `NotificationResponse::Default`
# on macOS, Windows, and Linux/XDG. Already in the tree transitively via the notification plugin.
notify-rust = "4"
tauri-plugin-autostart = "2"
# Native message dialogs, used only from Rust at startup to warn (Linux) when the OS credential
# store is unreachable. Backend-only use needs no capability permission (those gate webview IPC).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
url = "2"
keyring = "4"
zeroize = "1"
uuid = { version = "1", features = ["v4"] }
rust-i18n = "4"
sys-locale = "0.3"
tauri-plugin-updater = "2"
semver = "1"

[dev-dependencies]
wiremock = "0.6"

[package.metadata.i18n]
available-locales = ["en", "fr"]
default-locale = "en"
load-path = "locales"

